# WarpDriveSimulator

./: CMakeLists.txt
Mathematica/: WarpDriveSpacetime.wl  building_package.nb  building_package_debugscript.nb  sample_notebook.nb  warpdrivesimulator.m
Python/: pyproject.toml
Python/simulations/: alcubierre.py
Python/src/abstract/: metric.py  metricvariables.py  spacetime.py
Python/src/utils/: device_setup.py
shaders/: compute_shader.glsl  fragment_shader.glsl
simulations/: alcubierre.py
src/: __init__.py  main.cpp
src/abstract/: metric.py  metricvariables.py  spacetime.py
src/core/: flat_spacetime.cpp  flat_spacetime.h  spacetime_metric.h  types.h
src/rendering/: camera.cpp  camera.h  camera.py  nullgeodesic_integrator.py  shader.h
src/simulation/: spacetime_manager.h
src/spacetimes/: alcubierre.py  minkowski.py
src/tests/: test_spacetimes.py
src/utils/: device_setup.py
